--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ box-shadow: inset 2px 2px 1px 1px rgba(1, 1, 1, .4);*/
 }
 .features, .ideal, .sizechart, .views {
 	color:rgba(0,0,0,0.7);
-	font-size: 1em;
+	font-size: .9em;
 	font-family: langdon;
 	text-transform: uppercase;
 	margin-right: 10%;
@@ -500,10 +500,10 @@ form .filter-submit {
  	margin: 0 auto;
     margin-bottom: 10px;
     width: 100%;
-    height: 25px;
+    height: 40px;
     position: relative;
-    margin-top: 40px;
-    outline: solid #007b99 medium;
+    margin-top: 20px;
+
 }
 .filterreset{
 /*	width: 80px;
@@ -525,22 +525,20 @@ form .filter-submit {
 form .filter-reset {
 	margin-top: 10px;
 	text-transform: uppercase;
-	background: url(img/subtle_grunge.png);
+	background: url(img/mochaGrunge.png);
     border: medium none;
- 	color: #333333;
+ 	color: #ededed;
     font-family: langdon;
     font-size: 1.2em;
     /*padding: 5px 40px 5px 40px;*/ /* Removed by RC was causing problem in safari */
  	margin: 0 auto;
     margin-bottom: 10px;
     width: 100%;
-    height: 25px;
+    height: 40px;
     position: relative;
-    margin-top: 10px;
-    outline: solid #cccccc medium;
 }
 form .filter-reset:hover {
-	background: url(img/mochaGrunge.png);
+	background: url(img/mochaGrunge.jpg);
 	color: #ededed;
 }
 form .filter-reset:active {
@@ -694,11 +692,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	height: 35px
 }
 .detailsInner{
-	background: none;
+	background: url(img/subtle_grunge.png);
 	/*margin-top: 10px;*/
     /*padding: 40px 40px 40px 40px;*/
     padding: 40px 0px 60px 0px;
     margin: 0 auto;
+    border-top: solid thin #555555;
+    border-bottom: solid thin #555555;
 }
 
 .arrow-up {
