tweaked media queries
tweaked media queries

--- a/home2.css
+++ b/home2.css
@@ -145,9 +145,10 @@ img.gfsview{
 }
 }
 @media only screen and (max-width: 768px){
-	img#sparespike{
-		width: 80%;
-	}
+
+	#home h1{
+	font-size: 40px;
+}
 }
 @media only screen and (max-width:640px) {
 	#instructions{
