--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ nav#productnav ul li a.active{
 	left: 10px;
 }
 .details{
-	display: none;
+	/*display: none;*/
 	/*position: relative;*/
 	/*background-color: #FFFFFF;*/
 /*	-webkit-box-shadow: inset 2px 2px 1px 1px rgba(1, 1, 1, .4);
@@ -312,7 +312,8 @@ nav a.active{
 }
 nav ul li{
 	display:inline-block;
-	margin-top: 5px;
+	/*margin-top: 5px;*/
+	margin:5px 30px 0px 30px;
 }
 
 #productnav li {
@@ -527,7 +528,7 @@ form .filter-submit {
     width: 100%;
     height: 40px;
     position: relative;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 
 }
 .filterreset{
@@ -561,6 +562,7 @@ form .filter-reset {
     width: 100%;
     height: 40px;
     position: relative;
+    margin-top: 20px;
 }
 form .filter-reset:hover {
 	background: url(img/mochaGrunge.jpg);
@@ -723,7 +725,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	font-size: 12px;
 	color:#333333;
 	letter-spacing: 1px;
-	font-family: karbon;
+	font-family: karbonlight;
 	margin: 0 auto;
 	margin-top: 28px;
 	max-width: 70px;
@@ -945,7 +947,7 @@ text-align: center;
 color: #333333;
 }
 form label{
-	/*font-family: langdon;*/
+	font-family: langdon;
 	text-transform: uppercase;
 	font-size: .7em;
 }
