--- a/style.css
+++ b/style.css
@@ -71,16 +71,15 @@ table {
 
 @font-face {
     font-family: 'karbonmedium';
-    src: url('fonts/karbon/karbon-medium-webfont.eot');
-    src: url('fonts/karbon/karbon-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/karbon/karbon-medium-webfont.woff') format('woff'),
-         url('fonts/karbon/karbon-medium-webfont.ttf') format('truetype'),
-         url('fonts/karbon/karbon-medium-webfont.svg#karbonmedium') format('svg');
+    src: url('fonts/karbon-medium-webfont.eot');
+    src: url('fonts/karbon-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/karbon-medium-webfont.woff') format('woff'),
+         url('fonts/karbon-medium-webfont.ttf') format('truetype'),
+         url('fonts/karbon-medium-webfont.svg#karbonmedium') format('svg');
     font-weight: normal;
     font-style: normal;
     letter-spacing: 1px;
 }
-
 
 @font-face {
     font-family: 'langdon';
@@ -93,8 +92,6 @@ table {
     font-style: normal;
 
 }
-
-
 
 
 @font-face {
@@ -502,7 +499,7 @@ box-shadow: 0 0 2px 4px #37a0d0;
 	margin-left: 10px;
 	width: 160px;*/
 	padding: 2px 0px;
-	font-family: karbon;
+	font-family: karbonmedium;
 }
 .opt-wrap input{
 	float:left;
