--- a/style.css
+++ b/style.css
@@ -257,17 +257,19 @@ box-shadow: inset 2px 2px 1px 1px rgba(1, 1, 1, .4);*/
 	margin-top:40px;
 }
 .details-moreinfo a{
-		color:#46bfdf;
-	font-size: 18px;
-	-webkit-transition: color .3s ease-in-out;
-	-moz-transition: color .3s ease-in-out;
-	-o-transition: color .3s ease-in-out;
-	-ms-transition: color .3s ease-in-out;
-	transition: color .3s ease-in-out;
+	color: #FFFFFF;
+background: url(img/subtle_grunge_blue.png) top;
+padding: 10px;
+font-family: langdon;
+letter-spacing: 1px;
+margin-top: 30px;
+-webkit-transition: color .3s ease-in-out;
+-moz-transition: color .3s ease-in-out;
+-o-transition: color .3s ease-in-out;
+-ms-transition: color .3s ease-in-out;
 }
 .details-moreinfo a:hover{
-		color:#999999;
-		font-size: 18px;
+	color: #333333;
 }
 .message {
 	color: #333333;
@@ -287,7 +289,6 @@ box-shadow: inset 2px 2px 1px 1px rgba(1, 1, 1, .4);*/
 .ideal-info table, .ideal-info th, .ideal-info td, .sizechart-info table, .sizechart-info th, .sizechart-info td
 {
 border: 1px solid black;
-background-color: #777777;
 color: #ffffff;
 min-width: 30px;
 }
@@ -296,8 +297,24 @@ min-width: 30px;
 padding:8px 8px;
 text-align: center;
 }
+.ideal-info table tr:nth-child(odd){
+background: #18404B;	
+}
+.ideal-info table tr:nth-child(even){
+		background: #2F454B;
+}
+.sizechart-info th {
+background: #18404B;
+}
+.sizechart-info td{
+	background: #2F454B;
+}
 /*.ideal-info, .sizechart-info, .views-info, .features-info{
 }*/
+
+.views-info{
+float:right;
+}
 .features-info ul{
 	list-style-type: disc;
 	margin-left: 15px;
