Updated forms | Updated home page 3 sections | Fixed Filter Issues

--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+textarea {
+	resize: none;
+}
 /* >> The Magnificent CLEARFIX << */
 .clearfix:after {
 	content: ".";
