--- a/home.css
+++ b/home.css
@@ -253,6 +253,34 @@ img.shoez{
 	top: 0px;
 }
 
+
+.modal {
+  position: absolute;
+  margin-top: 0px;
+  top: 30%;
+  left: 50%;
+  z-index: 1050000;
+  width: 98%;
+  margin-left: -49%;
+  background: url(img/subtle_grunge.png);
+  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  *border: 1px solid #999;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+  outline: none;
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+     -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -webkit-background-clip: padding-box;
+     -moz-background-clip: padding-box;
+          background-clip: padding-box;
+}
+.modal h1#myModalLabel{
+	font-size: 30px;
+}
+
 a.ctabox{
 	color: #FFFFFF;
 	background: url(img/subtle_grunge_blue.png) top;
@@ -271,5 +299,8 @@ a.ctabox.view{
 }
 a.learn{
 	display:inline-block;
+}
+#contactForm div{
+	float:none !important;
 }
 }
