--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ body{
 	font-family: karbonlight;
 	letter-spacing: 2px;
 	width: 100%;
-	overflow-x:hidden;
+	-ms-overflow-x: hidden;
+	overflow-x: hidden;
 }
 .bold{
 	font-weight: bold;
@@ -288,15 +289,16 @@ margin-top: 30px;
     table-layout:fixed;
     width:100%;
 }*/
+
 .ideal-info table, .ideal-info th, .ideal-info td, .sizechart-info table, .sizechart-info th, .sizechart-info td
 {
 border: 1px solid black;
 color: #ffffff;
-min-width: 30px;
+min-width: 60px;
 }
 .ideal-info td, .sizechart-info td
 {
-padding:8px 8px;
+padding:4px 4px;
 text-align: center;
 }
 /*.ideal-info table tr:nth-child(odd){
@@ -305,11 +307,13 @@ background: #18404B;
 .ideal-info table tr:nth-child(even){
 		background: #2F454B;
 }*/
+
 .ideal-info th, .sizechart-info th {
 background: #18404B;
 }
 .ideal-info td, .sizechart-info td{
 	background: #2F454B;
+	font-size: 12px;
 }
 /*.ideal-info, .sizechart-info, .views-info, .features-info{
 }*/
@@ -1420,7 +1424,7 @@ nav ul li{
 	#home img#newsole2{
 		display:block;
 		max-width: 70px;
-		left: 160px;
+		left: 200px;
 	}
 nav a{
 	font-family: nexalight;
@@ -1447,6 +1451,13 @@ nav a{
 	padding-top: 0px;
 	padding-bottom: 50px;
 }
+}
 
+@media only screen and (max-width: 320px){
+		#home img#newsole2{
+		display:block;
+		max-width: 70px;
+		left: 160px;
+	}
 }
 
