--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ background: #18404B;
 background: #18404B;
 }
 .ideal-info td, .sizechart-info td{
-	background: #2F454B;
+	background: #666666;
 	font-size: 12px;
 }
 /*.ideal-info, .sizechart-info, .views-info, .features-info{
