--- a/home2.css
+++ b/home2.css
@@ -106,7 +106,7 @@ box-shadow: 1px 1px 1px 1px rgba(1, 1, 1, .2);
 	width: 200px;
 	margin: 0 auto;
 }
-.button a.viewmore{
+.button span.viewmore{
 	display:block;
 	position: relative;
 	z-index: 100;
@@ -123,7 +123,7 @@ box-shadow: 1px 1px 1px 1px rgba(1, 1, 1, .2);
 	-ms-transition: color .3s ease-in-out;
 	transition: color .3s ease-in-out;
 }
-.button a.viewmore:hover{
+.button span.viewmore:hover{
 	color: #FFFFFF;
 	cursor: pointer;
 }
