--- a/style.css
+++ b/style.css
@@ -487,8 +487,8 @@ button.product:active {
 	padding: 0px 6px;
 }
 .main-image{
-	width: 360px;
-	height: 360px;
+	width: 100%;
+	height: auto;
 	display: block;
 	margin-bottom: 10px;
 }
