--- a/flexslider.css
+++ b/flexslider.css
@@ -23,7 +23,8 @@
 *********************************/
 .flexslider {margin: 0; padding: 0;}
 /*.flexslider .slides > li:first-child {display: block; -webkit-backface-visibility: visible;}*/
-.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;}
+.flexslider .slides > li:first-child {display: block; -webkit-backface-visibility: visible;}  /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
