--- a/style.css
+++ b/style.css
@@ -1303,6 +1303,13 @@ h1, a.size{
 	padding-bottom: 30px;
 	color: #eeeeee;
 }
+.features, .ideal, .sizechart, .views {
+	color:rgba(0,0,0,0.7);
+	font-size: .9em;
+	font-family: langdon;
+	text-transform: uppercase;
+	margin-right: 5%;
+}
 }
 @media only screen and (max-width: 700px){
 .hide2{
